--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<h2>Witching Hour</h2>
 								<p>Made for the WolverineSoft 2022 Pumpkin Jam.</p>
 								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
+									<li><a href="https://fonsecap.itch.io/witching-hour" class="button">Play</a></li>
 								</ul>
 							</div>
 						</div>
@@ -75,7 +75,7 @@
 								<h2>Ace of Swords</h2>
 								<p>Made for the WolverineSoft 2022 Turkey Jam.</p>
 								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
+									<li><a href="generic.html" class="button">Play</a></li>
 								</ul>
 							</div>
 						</div>
@@ -87,10 +87,22 @@
 								<h2>Legend(s) of Zelda</h2>
 								<p>
 									Made as a class project for EECS 494: Intro to Game Development. Features the first dungeon of the original NES class "The Legend of Zelda"
-									and a custom level where you might feel like you are seeing double.
+									and a custom level where you might feel like you are seeing double. Thank you Melissa Fang for being a great partner!
+								</p>
+								<h2>Contributions</h2>
+								<p>
+									Like the shiny weapons? I handled all of their functionaility and animations.
+									The Legend of Zelda is full of rich sound effects and I implemented them in this rendition of the classic game.
+									Condition based events like opening locked doors, puzzle doors, or enemy-locked doors were part of my duties.
+									The nostalgic Old Man Room, the perspective-shifting 2D Bow Room, and everything inside of them (besides enemies) also fell into my hands.
+								</p>
+								<h2>Toolkit</h2>
+								<p>
+									My partner and I created this version of "The Legend of Zelda" through the Unity game engine and C# scripts.
+									A WebGL build was then hosted to itch.io which you may find below.
 								</p>
 								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
+									<li><a href="https://fonsecap.itch.io/legend-of-zelda" class="button">Play</a></li>
 								</ul>
 							</div>
 						</div>
