--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<!-- Two -->
 				<section id="two" class="wrapper style2 spotlights">
 					<section>
-						<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+						<a href="#" class="image"><img src="images/treehouse.png" alt="" data-position="center center" /></a>
 						<div class="content">
 							<div class="inner">
 								<h2>Witching Hour</h2>
@@ -69,19 +69,19 @@
 						</div>
 					</section>
 					<section>
-						<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+						<a href="#" class="image"><img src="images/card_back.png" alt="" data-position="top center" /></a>
 						<div class="content">
 							<div class="inner">
 								<h2>Ace of Swords</h2>
 								<p>Made for the WolverineSoft 2022 Turkey Jam.</p>
 								<ul class="actions">
-									<li><a href="generic.html" class="button">Play</a></li>
+									<li><a href="https://fonsecap.itch.io/ace-of-swords" class="button">Play</a></li>
 								</ul>
 							</div>
 						</div>
 					</section>
 					<section>
-						<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+						<a href="#" class="image"><img src="images/aqua.png" alt="" data-position="25% 25%" /></a>
 						<div class="content">
 							<div class="inner">
 								<h2>Legend(s) of Zelda</h2>
