--- a/index.html
+++ b/index.html
@@ -107,6 +107,36 @@
 							</div>
 						</div>
 					</section>
+					<section>
+						<a href="#" class="image"><img src="images/bird.png" alt="" data-position="25% 25%" /></a>
+						<div class="content">
+							<div class="inner">
+								<h2>Left Behind</h2>
+								<p>
+									Made as a class project for EECS 494: Intro to Game Development. Features a mix of known stamina mechanics
+									and temporary invincibility mechanics with a flying auto-scroller.
+								</p>
+								<h2>Contributions</h2>
+								<p>
+									This project was a solo project. Other than the art and audio, I am the sole owner of all 
+									the details seen in-game. 
+
+									Some noteworthy methods utilized in the game's creation include level segmentation (for performance maintenance),
+									ample resource placement, semi-random but accuracte obstacle spawning, and a singelton GameManager procedure.
+
+									Special thanks to a close friend Dillon Hembree for the bird art.
+								</p>
+								<h2>Toolkit</h2>
+								<p>
+									I created "Left Behind" through the Unity game engine and C# scripts.
+									A WebGL build was then hosted to itch.io which you may find below.
+								</p>
+								<ul class="actions">
+									<li><a href="https://fonsecap.itch.io/left-behind" class="button">Play</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
 				</section>
 
 
