--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						</div>
 					</section>
 					<section>
-						<a href="#" class="image"><img src="images/bird.png" alt="" data-position="center center" /></a>
+						<a href="#" class="image"><img src="images/bird.png" width="150" height="108" alt="" data-position="center center" /></a>
 						<div class="content">
 							<div class="inner">
 								<h2>Left Behind</h2>
