Portfolio Format Test

--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
                     <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                         <h5 class="font-weight-bold mb-1">EECS 280 - Programming and Introductory Data Structures</h5>
-                        <p class="mb-2"><strong>University of Michigan - Ann Arbor</strong> | <small>2020 - present</small></p>
+                        <p class="mb-2"><strong>University of Michigan - Ann Arbor</strong> | <small>2021</small></p>
                         <p> Integrated dynamic structures into coding knowledge including structured data types, pointers, linked data structures, stacks, queues, arrays, records, and trees.
                         </p>
                     </div>
                     <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                         <h5 class="font-weight-bold mb-1">EECS 281 - Data Structures and Algorithms</h5>
-                        <p class="mb-2"><strong>University of Michigan - Ann Arbor</strong> | <small>2020 - present</small></p>
+                        <p class="mb-2"><strong>University of Michigan - Ann Arbor</strong> | <small>2022</small></p>
                         <p>Dove into Big-O notation with runtime analysis of well-known algorithms including searching and
                             storing, recursive, basic graph, greedy, and divide and conquer algorithms.Introduced to additional data structures 
                             (priority queues, hash tables, and binary trees) that take advantage of certain data patterns for runtime efficiency.
@@ -140,7 +140,7 @@
                     <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                         <h5 class="font-weight-bold mb-1">EECS 494 - Introduction to Game Development</h5>
-                        <p class="mb-2"><strong>University of Michigan - Ann Arbor</strong> | <small>2020 - present</small></p>
+                        <p class="mb-2"><strong>University of Michigan - Ann Arbor</strong> | <small>2023</small></p>
                         <p>Dipped my toes into the ocean that is game development. The class began with a 1-month, two-person project where we were expected to recreate the first dunegon of
                             The Legend of Zelda. We then split of into solo projects where we developed a unique game mechanic and showcased it in a small game developed over only 2 weeks. 
                             The rest of the class (2 months) was dedicated to a building a game from the ground up with a 5-person team. These games can be found in the gallery poriton of
@@ -160,7 +160,7 @@
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Gallery</h1>
                 <h1 class="position-absolute text-uppercase text-primary">My Portfolio</h1>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-12 text-center mb-2">
                     <ul class="list-inline mb-4" id="portfolio-flters">
                         <li class="btn btn-sm btn-outline-primary m-1 active"  data-filter="*">All</li>
@@ -169,7 +169,7 @@
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Marketing</li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
             <div class="row portfolio-container">
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative overflow-hidden mb-2">
@@ -183,15 +183,36 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio-2.jpg" alt="">
+                        <p>Dipped my toes into the ocean that is game development. The class began with a 1-month, two-person project where we were expected to recreate the first dunegon of
+                            The Legend of Zelda. We then split of into solo projects where we developed a unique game mechanic and showcased it in a small game developed over only 2 weeks. 
+                            The rest of the class (2 months) was dedicated to a building a game from the ground up with a 5-person team. These games can be found in the gallery poriton of
+                            the portfolio!
+                        </p>
+                    </div>
+                </div>
+            <div>
+            <div class="row portfolio-container">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <img class="img-fluid rounded w-100" src="img/portfolio-1.jpg" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-2.jpg" data-lightbox="portfolio">
+                            <a href="img/portfolio-1.jpg" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <p>Dipped my toes into the ocean that is game development. The class began with a 1-month, two-person project where we were expected to recreate the first dunegon of
+                            The Legend of Zelda. We then split of into solo projects where we developed a unique game mechanic and showcased it in a small game developed over only 2 weeks. 
+                            The rest of the class (2 months) was dedicated to a building a game from the ground up with a 5-person team. These games can be found in the gallery poriton of
+                            the portfolio!
+                        </p>
+                    </div>
+                </div>
+            <div>
+                <!-- <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
                         <img class="img-fluid rounded w-100" src="img/portfolio-3.jpg" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
@@ -231,7 +252,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Portfolio End -->
@@ -288,12 +309,11 @@
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                <!-- <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a> -->
                 <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
             </div>
-            <div class="d-flex justify-content-center mb-3">
+            <!-- <div class="d-flex justify-content-center mb-3">
                 <a class="text-white" href="#">Privacy</a>
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">Terms</a>
@@ -303,7 +323,7 @@
                 <a class="text-white" href="#">Help</a>
             </div>
             <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Domain Name</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
-            </p>
+            </p> -->
         </div>
     </div>
     <!-- Footer End -->
