--- a/index.html
+++ b/index.html
@@ -154,107 +154,115 @@
     <!-- Qualification End -->
 
     <!-- Portfolio Start -->
-    <div class="container-fluid pt-5 pb-3" id="portfolio">
-        <div class="container">
-            <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Gallery</h1>
-                <h1 class="position-absolute text-uppercase text-primary">My Portfolio</h1>
-            </div>
-            <!-- <div class="row">
-                <div class="col-12 text-center mb-2">
-                    <ul class="list-inline mb-4" id="portfolio-flters">
-                        <li class="btn btn-sm btn-outline-primary m-1 active"  data-filter="*">All</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">Design</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Development</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Marketing</li>
+    <div id="wrapper">
+
+    <!-- Intro -->
+    <section id="intro" class="wrapper style1 fullscreen fade-up">
+        <div class="inner">
+            <h1>Pedro's Grand Portfolio</h1>
+            <p>Just another night owl who loves making and playing video games.</p>
+            <ul class="actions">
+                <li><a href="#one" class="button scrolly">Learn more</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- One -->
+    <section id="one" class="wrapper style3 fade-up">
+        <div class="inner">
+            <h2>Who I am</h2>
+            <p>Hey there! I am Pedro Fonseca, a current third-year at the University of Michigan studying Computer Science and Cognitive Science. 
+            A tough journey lies ahead as I dive head-first into game development and there is no better way to swim than getting some strides going.
+            Below you will find some of the best works I have in my pocket as of this moment. All of them are made under immense time pressure making
+            sure every second of time means something to the end result. Take a gander and let me know what you think!
+            </p>
+        </div>
+    </section>
+
+    <!-- Two -->
+    <section id="two" class="wrapper style2 spotlights">
+        <section>
+            <a href="#" class="image"><img src="images/treehouse.png" alt="" data-position="center center" /></a>
+            <div class="content">
+                <div class="inner">
+                    <h2>Witching Hour</h2>
+                    <p>Made for the WolverineSoft 2022 Pumpkin Jam.</p>
+                    <ul class="actions">
+                        <li><a href="https://fonsecap.itch.io/witching-hour" class="button">Play</a></li>
                     </ul>
                 </div>
-            </div> -->
-            <div class="row portfolio-container">
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
-                    <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio-1.jpg" alt="">
-                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-1.jpg" data-lightbox="portfolio">
-                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
-                            </a>
-                        </div>
-                    </div>
+            </div>
+        </section>
+        <section>
+            <a href="#" class="image"><img src="images/card_back.png" alt="" data-position="top center" /></a>
+            <div class="content">
+                <div class="inner">
+                    <h2>Ace of Swords</h2>
+                    <p>Made for the WolverineSoft 2022 Turkey Jam.</p>
+                    <ul class="actions">
+                        <li><a href="https://fonsecap.itch.io/ace-of-swords" class="button">Play</a></li>
+                    </ul>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
-                    <div class="position-relative overflow-hidden mb-2">
-                        <p>Dipped my toes into the ocean that is game development. The class began with a 1-month, two-person project where we were expected to recreate the first dunegon of
-                            The Legend of Zelda. We then split of into solo projects where we developed a unique game mechanic and showcased it in a small game developed over only 2 weeks. 
-                            The rest of the class (2 months) was dedicated to a building a game from the ground up with a 5-person team. These games can be found in the gallery poriton of
-                            the portfolio!
-                        </p>
-                    </div>
+            </div>
+        </section>
+        <section>
+            <a href="#" class="image"><img src="images/aqua.png" alt="" data-position="25% 25%" /></a>
+            <div class="content">
+                <div class="inner">
+                    <h2>Legend(s) of Zelda</h2>
+                    <p>
+                        Made as a class project for EECS 494: Intro to Game Development. Features the first dungeon of the original NES class "The Legend of Zelda"
+                        and a custom level where you might feel like you are seeing double. Thank you Melissa Fang for being a great partner!
+                    </p>
+                    <h2>Contributions</h2>
+                    <p>
+                        Like the shiny weapons? I handled all of their functionaility and animations.
+                        The Legend of Zelda is full of rich sound effects and I implemented them in this rendition of the classic game.
+                        Condition based events like opening locked doors, puzzle doors, or enemy-locked doors were part of my duties.
+                        The nostalgic Old Man Room, the perspective-shifting 2D Bow Room, and everything inside of them (besides enemies) also fell into my hands.
+                    </p>
+                    <h2>Toolkit</h2>
+                    <p>
+                        My partner and I created this version of "The Legend of Zelda" through the Unity game engine and C# scripts.
+                        A WebGL build was then hosted to itch.io which you may find below.
+                    </p>
+                    <ul class="actions">
+                        <li><a href="https://fonsecap.itch.io/legend-of-zelda" class="button">Play</a></li>
+                    </ul>
                 </div>
-            <div>
-            <div class="row portfolio-container">
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
-                    <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio-1.jpg" alt="">
-                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-1.jpg" data-lightbox="portfolio">
-                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
-                            </a>
-                        </div>
-                    </div>
+            </div>
+        </section>
+        <section>
+            <a href="#" class="image"><img src="images/bird.png" width="150" height="108" alt="" data-position="center center" /></a>
+            <div class="content">
+                <div class="inner">
+                    <h2>Left Behind</h2>
+                    <p>
+                        Made as a class project for EECS 494: Intro to Game Development. Features a mix of known stamina mechanics
+                        and temporary invincibility mechanics with a flying auto-scroller.
+                    </p>
+                    <h2>Contributions</h2>
+                    <p>
+                        This project was a solo project. Other than the art and audio, I am the sole owner of all 
+                        the details seen in-game. 
+
+                        Some noteworthy methods utilized in the game's creation include level segmentation (for performance maintenance),
+                        ample resource placement, semi-random but accuracte obstacle spawning, and a singelton GameManager procedure.
+
+                        Special thanks to a close friend Dillon Hembree for the bird art.
+                    </p>
+                    <h2>Toolkit</h2>
+                    <p>
+                        I created "Left Behind" through the Unity game engine and C# scripts.
+                        A WebGL build was then hosted to itch.io which you may find below.
+                    </p>
+                    <ul class="actions">
+                        <li><a href="https://fonsecap.itch.io/left-behind" class="button">Play</a></li>
+                    </ul>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
-                    <div class="position-relative overflow-hidden mb-2">
-                        <p>Dipped my toes into the ocean that is game development. The class began with a 1-month, two-person project where we were expected to recreate the first dunegon of
-                            The Legend of Zelda. We then split of into solo projects where we developed a unique game mechanic and showcased it in a small game developed over only 2 weeks. 
-                            The rest of the class (2 months) was dedicated to a building a game from the ground up with a 5-person team. These games can be found in the gallery poriton of
-                            the portfolio!
-                        </p>
-                    </div>
-                </div>
-            <div>
-                <!-- <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
-                    <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio-3.jpg" alt="">
-                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-3.jpg" data-lightbox="portfolio">
-                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
-                    <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio-4.jpg" alt="">
-                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-4.jpg" data-lightbox="portfolio">
-                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
-                    <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio-5.jpg" alt="">
-                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-5.jpg" data-lightbox="portfolio">
-                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
-                    <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio-6.jpg" alt="">
-                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/portfolio-6.jpg" data-lightbox="portfolio">
-                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-        </div>
-    </div>
+            </div>
+        </section>
+    </section>
     <!-- Portfolio End -->
     
     <!-- Contact Start -->
