--- a/index.html
+++ b/index.html
@@ -154,115 +154,77 @@
     <!-- Qualification End -->
 
     <!-- Portfolio Start -->
-    <div id="wrapper">
-
-    <!-- Intro -->
-    <section id="intro" class="wrapper style1 fullscreen fade-up">
-        <div class="inner">
-            <h1>Pedro's Grand Portfolio</h1>
-            <p>Just another night owl who loves making and playing video games.</p>
-            <ul class="actions">
-                <li><a href="#one" class="button scrolly">Learn more</a></li>
-            </ul>
+    <div class="container-fluid py-5" id="qualification">
+        <div class="container">
+            <div class="position-relative d-flex align-items-center justify-content-center">
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Quality</h1>
+                <h1 class="position-absolute text-uppercase text-primary">My Games</h1>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <h3 class="mb-4">Projects</h3>
+                    <div class="border-left border-primary pt-2 pl-4 ml-2">
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Witching Hour</h5>
+                            <p class="mb-2"><strong>WolverineSoft Pumpkin Jam</strong> | <small>2022</small></p>
+                            <img class="img-fluid rounded w-100" src="img/treehouse.png" alt="">
+                            <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                                <a href="img/treehouse.png" data-lightbox="portfolio">
+                                    <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Ace of Swords</h5>
+                            <p class="mb-2"><strong>WolverineSoft 2022 Turkey Jam</strong> | <small>2022</small></p>
+                            <img class="img-fluid rounded w-100" src="images/card_back.png" alt="">
+                            <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                                <a href="images/card_back.png" data-lightbox="portfolio">
+                                    <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Legend(s) of Zelda</h5>
+                            <p class="mb-2"><strong>EECS 494 - Project 1</strong> | <small>2023</small></p>
+                            <img class="img-fluid rounded w-100" src="images/aqua.png" alt="">
+                            <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                                <a href="images/aqua.png" data-lightbox="portfolio">
+                                    <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <h3 class="mb-4">Tools</h3>
+                    <div class="border-left border-primary pt-2 pl-4 ml-2">
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Web Designer</h5>
+                            <p class="mb-2"><strong>Soft Company</strong> | <small>2000 - 2050</small></p>
+                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                        </div>
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Web Designer</h5>
+                            <p class="mb-2"><strong>Soft Company</strong> | <small>2000 - 2050</small></p>
+                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                        </div>
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Web Designer</h5>
+                            <p class="mb-2"><strong>Soft Company</strong> | <small>2000 - 2050</small></p>
+                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </section>
-
-    <!-- One -->
-    <section id="one" class="wrapper style3 fade-up">
-        <div class="inner">
-            <h2>Who I am</h2>
-            <p>Hey there! I am Pedro Fonseca, a current third-year at the University of Michigan studying Computer Science and Cognitive Science. 
-            A tough journey lies ahead as I dive head-first into game development and there is no better way to swim than getting some strides going.
-            Below you will find some of the best works I have in my pocket as of this moment. All of them are made under immense time pressure making
-            sure every second of time means something to the end result. Take a gander and let me know what you think!
-            </p>
-        </div>
-    </section>
-
-    <!-- Two -->
-    <section id="two" class="wrapper style2 spotlights">
-        <section>
-            <a href="#" class="image"><img src="images/treehouse.png" alt="" data-position="center center" /></a>
-            <div class="content">
-                <div class="inner">
-                    <h2>Witching Hour</h2>
-                    <p>Made for the WolverineSoft 2022 Pumpkin Jam.</p>
-                    <ul class="actions">
-                        <li><a href="https://fonsecap.itch.io/witching-hour" class="button">Play</a></li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-        <section>
-            <a href="#" class="image"><img src="images/card_back.png" alt="" data-position="top center" /></a>
-            <div class="content">
-                <div class="inner">
-                    <h2>Ace of Swords</h2>
-                    <p>Made for the WolverineSoft 2022 Turkey Jam.</p>
-                    <ul class="actions">
-                        <li><a href="https://fonsecap.itch.io/ace-of-swords" class="button">Play</a></li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-        <section>
-            <a href="#" class="image"><img src="images/aqua.png" alt="" data-position="25% 25%" /></a>
-            <div class="content">
-                <div class="inner">
-                    <h2>Legend(s) of Zelda</h2>
-                    <p>
-                        Made as a class project for EECS 494: Intro to Game Development. Features the first dungeon of the original NES class "The Legend of Zelda"
-                        and a custom level where you might feel like you are seeing double. Thank you Melissa Fang for being a great partner!
-                    </p>
-                    <h2>Contributions</h2>
-                    <p>
-                        Like the shiny weapons? I handled all of their functionaility and animations.
-                        The Legend of Zelda is full of rich sound effects and I implemented them in this rendition of the classic game.
-                        Condition based events like opening locked doors, puzzle doors, or enemy-locked doors were part of my duties.
-                        The nostalgic Old Man Room, the perspective-shifting 2D Bow Room, and everything inside of them (besides enemies) also fell into my hands.
-                    </p>
-                    <h2>Toolkit</h2>
-                    <p>
-                        My partner and I created this version of "The Legend of Zelda" through the Unity game engine and C# scripts.
-                        A WebGL build was then hosted to itch.io which you may find below.
-                    </p>
-                    <ul class="actions">
-                        <li><a href="https://fonsecap.itch.io/legend-of-zelda" class="button">Play</a></li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-        <section>
-            <a href="#" class="image"><img src="images/bird.png" width="150" height="108" alt="" data-position="center center" /></a>
-            <div class="content">
-                <div class="inner">
-                    <h2>Left Behind</h2>
-                    <p>
-                        Made as a class project for EECS 494: Intro to Game Development. Features a mix of known stamina mechanics
-                        and temporary invincibility mechanics with a flying auto-scroller.
-                    </p>
-                    <h2>Contributions</h2>
-                    <p>
-                        This project was a solo project. Other than the art and audio, I am the sole owner of all 
-                        the details seen in-game. 
-
-                        Some noteworthy methods utilized in the game's creation include level segmentation (for performance maintenance),
-                        ample resource placement, semi-random but accuracte obstacle spawning, and a singelton GameManager procedure.
-
-                        Special thanks to a close friend Dillon Hembree for the bird art.
-                    </p>
-                    <h2>Toolkit</h2>
-                    <p>
-                        I created "Left Behind" through the Unity game engine and C# scripts.
-                        A WebGL build was then hosted to itch.io which you may find below.
-                    </p>
-                    <ul class="actions">
-                        <li><a href="https://fonsecap.itch.io/left-behind" class="button">Play</a></li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-    </section>
+    </div>
     <!-- Portfolio End -->
     
     <!-- Contact Start -->
