--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Ace of Swords</h5>
                             <p class="mb-2"><strong>WolverineSoft 2022 Turkey Jam</strong> | <small>2022</small></p>
-                            <img class="img-fluid rounded w-100" src="images/card_back.png" alt="">
+                            <img class="img-fluid rounded w-100" src="img/card_back.png" alt="">
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Legend(s) of Zelda</h5>
                             <p class="mb-2"><strong>EECS 494 - Project 1</strong> | <small>2023</small></p>
-                            <img class="img-fluid rounded w-100" src="images/aqua.png" alt="">
+                            <img class="img-fluid rounded w-100" src="img/aqua.png" alt="">
                         </div>
                     </div>
                 </div>
