--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <!-- Qualification End -->
 
     <!-- Portfolio Start -->
-    <div class="container-fluid py-5" id="qualification">
+    <div class="container-fluid py-5" id="portfolio">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Quality</h1>
